--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>Kitsune Design Studio</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Professional logos, branding and graphic design">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,8 +23,7 @@
 
 <section id="services">
   <div class="card">
-    <h2>Design Services</h2>
-
+    <h2>Services</h2>
     <div class="services">
       <div class="service">Logos</div>
       <div class="service">Business Branding</div>
@@ -41,7 +39,24 @@
 <section id="pricing">
   <div class="card">
     <h2>Price List</h2>
-    <img src="images/pricelist.png" class="price-img" alt="Kitsune Price List">
+
+    <div class="pricing">
+      <div class="price-item"><div>Logo Design</div><span>R500</span></div>
+      <div class="price-item"><div>Logo Redraw</div><span>R350</span></div>
+
+      <div class="price-item"><div>Flyer (Social Media)</div><span>R250</span></div>
+      <div class="price-item"><div>Flyer (Print)</div><span>R250</span></div>
+      <div class="price-item"><div>Ticket Design</div><span>R150</span></div>
+
+      <div class="price-item"><div>Business Card (Single)</div><span>R100</span></div>
+      <div class="price-item"><div>Business Card (Double)</div><span>R150</span></div>
+
+      <div class="price-item"><div>Sticker Design</div><span>R150</span></div>
+      <div class="price-item"><div>Calendar Design</div><span>R200</span></div>
+      <div class="price-item"><div>Invitation Video</div><span>R500</span></div>
+      <div class="price-item"><div>Menu Design</div><span>R500</span></div>
+    </div>
+
   </div>
 </section>
 
@@ -59,3 +74,4 @@
 
 </body>
 </html>
+
