--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
 
 <nav>
   <a href="#">Home</a>
-  <a href="#services">Services</a>
-  <a href="#pricing">Pricing</a>
+  <a href="#services">Design Services</a>
+  <a href="pricing.html">Pricing</a>
   <a href="#contact">Contact</a>
 </nav>
 
 <section id="services">
   <div class="card">
-    <h2>Services</h2>
+    <h2>Design Services</h2>
+    <p style="color:#8aff8a;font-weight:bold;">
+      ⚠ Printing will incur additional charges
+    </p>
+
     <div class="services">
       <div class="service">Logos</div>
       <div class="service">Business Branding</div>
@@ -33,30 +37,6 @@
       <div class="service">Invitations</div>
       <div class="service">Menus</div>
     </div>
-  </div>
-</section>
-
-<section id="pricing">
-  <div class="card">
-    <h2>Price List</h2>
-
-    <div class="pricing">
-      <div class="price-item"><div>Logo Design</div><span>R500</span></div>
-      <div class="price-item"><div>Logo Redraw</div><span>R350</span></div>
-
-      <div class="price-item"><div>Flyer (Social Media)</div><span>R250</span></div>
-      <div class="price-item"><div>Flyer (Print)</div><span>R250</span></div>
-      <div class="price-item"><div>Ticket Design</div><span>R150</span></div>
-
-      <div class="price-item"><div>Business Card (Single)</div><span>R100</span></div>
-      <div class="price-item"><div>Business Card (Double)</div><span>R150</span></div>
-
-      <div class="price-item"><div>Sticker Design</div><span>R150</span></div>
-      <div class="price-item"><div>Calendar Design</div><span>R200</span></div>
-      <div class="price-item"><div>Invitation Video</div><span>R500</span></div>
-      <div class="price-item"><div>Menu Design</div><span>R500</span></div>
-    </div>
-
   </div>
 </section>
 
@@ -72,6 +52,10 @@
   © 2026 Kitsune Design Studio
 </footer>
 
+<!-- FLOATING WHATSAPP BUTTON -->
+<a href="https://wa.me/27713796742" class="whatsapp-float">💬</a>
+
 </body>
 </html>
+
 
