--- a/pricing.html
+++ b/pricing.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Pricing – Kitsune Design Studio</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
